# MLH-PE-Hackathon-2026

./: .gitignore  Dockerfile  PROGRESS.md  README.md  docker-compose.yml  failure_manual.md  fluent-bit.conf  load_test_k6.js  load_test_ramp.js  nginx.conf  prometheus.yml  pyproject.toml  requirements.txt  test_bad_inputs.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: __init__.py  cache.py  database.py  logging.py
app/models/: event.py  url.py  user.py
app/routes/: events.py  metrics.py  urls.py  users.py
docs/: PROGRESS.md  api.md  architecture.md  capacity.md  config.md  decisions.md  deploy.md  failure_manual.md  troubleshooting.md
docs/runbooks/: high-error-rate.md  service-down.md
grafana/dashboards/: app.json
k6_out/: results.json
seed/: events.csv  init.sql  urls.csv  users.csv
tests/: conftest.py  test_cache.py  test_database_init.py  test_events.py  test_health.py  test_metrics.py  test_models_event.py  test_redirect.py  test_unit.py  test_urls.py  test_users.py
