[project]
name = "mlh-pe-hackathon"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "faker>=33.0",
    "flask>=3.1",
    "gunicorn>=23.0",
    "peewee>=3.17",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: pure unit tests, no DB or network required",
    "system: integration tests that require a running database",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
